I realised the KUBECONFIG env var is actually duplicated and thats why it doesn't work

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -76,12 +76,13 @@ jobs:
       - name: Setup Kubeconfig
         run: |
           echo $PATH
-          echo $KUBECONFIG > $HOME/kube/kubeconfig
+          echo ${CLUSTER_CONFIG} > $HOME/kube/kubeconfig
           cat $HOME/kube/kubeconfig
           ls -la $HOME/kube
 
       - name: Scale down
         run: | 
+          ls -la $HOME/kube
           kubectl get pods -n ${NAMESPACE}
           kubectl scale --replicas=0 -n ${NAMESPACE} deployment/${NAME} || true
           kubectl get deployments -n ${NAMESPACE}
