--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -83,8 +83,9 @@ jobs:
       - name: Scale down
         run: | 
           ls -la $HOME/kube
-          echo $KUBECONFIG
-          cat $HOME/kube/kubeconfig
+          echo ${KUBECONFIG}
+          cat ${HOME}/kube/kubeconfig
+          sha1sum ${KUBECONFIG}
           kubectl get pods -n ${NAMESPACE}
           kubectl scale --replicas=0 -n ${NAMESPACE} deployment/${NAME} || true
           kubectl get deployments -n ${NAMESPACE}
