--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -82,6 +82,7 @@ jobs:
 
       - name: Debugging
         run: | 
+          echo "${!GITHUB_WORKSPACE}/kubeconfig"
           echo "${!KUBECONFIG}"
           
 
