--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,7 +49,6 @@ jobs:
       CLUSTER_CONFIG: ${{ secrets.CLUSTER_CONFIG }}
       KUBECONFIG: ${GITHUB_WORKSPACE}/kubeconfig
       NAME: postfix
-      IMAGE: ghcr.io/kubernetes-mail-server/${NAME}
       NAMESPACE: mail-server
       REPLICAS: 1
       HELM: https://get.helm.sh/helm-v3.3.1-linux-amd64.tar.gz
@@ -82,9 +81,8 @@ jobs:
 
       - name: Debugging
         run: | 
-          echo "${!GITHUB_WORKSPACE}/kubeconfig"
-          echo "${!KUBECONFIG}"
-          
+          export -p KUBECONFIG=kubeconfig
+          sha1sum ${KUBECONFIG}
 
       - name: Scale down
         run: | 
@@ -107,7 +105,7 @@ jobs:
             --set hostname=$(kubectl get cm -n ${NAMESPACE} services-info -o=jsonpath="{.data.HOSTNAME}") \
             --set haproxy_smtpd=$(kubectl get cm -n ${NAMESPACE} services-info -o=jsonpath="{.data.POSTFIX_PORT}") \
             --set plain_smtpd=$(kubectl get cm -n ${NAMESPACE} services-info -o=jsonpath="{.data.POSTFIX_SUBMISSION_PORT}") \
-            --set repository=${IMAGE}@${{ steps.docker_build.outputs.digest }} \
+            --set repository=ghcr.io/kubernetes-mail-server/${NAME}@${{ steps.docker_build.outputs.digest }} \
             ${GITHUB_WORKSPACE}/kubernetes | kubectl apply -f -
 
       - name: Scale up
